2002-11-13  Jody Goldberg <jody@gnome.org>

	* ms-excel-write.c (excel_sheet_write_block) : speedup empty rows.
	  And use the undocumented optimized form for the DBCELL (#rows == 0)
          when dealing with sparse regions.
	(excel_write_ROWINFO) : ignore empty rows.

2002-11-13  Jody Goldberg <jody@gnome.org>

	* ms-formula-read.c (excel_parse_formula) : fix typo that broke 3d
	  references.

	* ms-formula-write.c (sheet_pair_add_if_unknown) : new.
	(excel_write_prep_expr) : use it for refs and regions.

	* ms-excel-write.c (excel_write_state_free) : release the function and
	  sheet pair tables.
	(excel_write_SCL) : new. Clean up and support zoom > 100
	(cb_write_sheet_pairs) : new.
	(excel_write_externsheets_v8) : generate sheet pairs for the
	  externsheet.  Still no support for external links.
	(excel_write_get_externsheet_idx) : implement.

2002-11-12  Jody Goldberg <jody@gnome.org>

	* ms-excel-write.c : Don't use StyleFont.  In the case where a font
	  does not exist on the display system it does the wrong thing.
	  MStyle can contain an invalid font.  StyleFont gets remapped to the
	  default.

2002-11-12  Jody Goldberg <jody@gnome.org>

	* ms-excel-write.c (palette_get_index) : add a warning if we are going
	  to lose a colour.
	(gather_palette) : improve debug.

	* ms-excel-util.c (two_way_table_move) : rename from
	  two_way_table_replace and fix.

2002-11-11  Jody Goldberg <jody@gnome.org>

	* ms-formula-write.c (write_cellref_v7) : fix signature.
	(write_cellref_v8) : ditto.
	(write_ref) : fix biff8 case.

	* ms-excel-write.c (gather_styles) : we already gathered the most
	  common styles earlier.
	(excel_sheet_new) : most common style in a column does not extend the
	  column.

	* ms-biff.c (ms_biff_put_len_next) : handle correct max biff record
	  sizes for biff7 vs biff8.  Looks like they teaked things so that the
	  dbcell records will always fit in 1 biff record.
	(ms_biff_put_len_commit) : ditto.

2002-11-10  Jody Goldberg <jody@gnome.org>
